test/resources/nameAnalyzer/failing/ValReassign.scala
object ValReassign extends App {
  var i : Int = 0;
  val j : Int = 0;
  j = 1
}
